name:                 arm-mra
version:              0.1.0.0
license:              MIT
license-file:         LICENSE
author:               Nick Spinale
maintainer:           spinalen@gmail.com
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

library
  hs-source-dirs:     src, gen
  default-language:   Haskell2010

  exposed-modules:    ARM.MRA
                    , ARM.MRA.Argument
                    , ARM.MRA.Decode
                    , ARM.MRA.Gen

  build-depends:      base >=4.8 && <5
                    , tagged
