name:                 arm-mras-parse
version:              0.1
license:              MIT
author:               Nick Spinale
maintainer:           spinalen@gmail.com
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010

  exposed-modules:    ARM.MRAS.Parse.AArch64
                    , ARM.MRAS.Parse.Internal.Util
                    , ARM.MRAS.Parse.Internal.SharedPs
                    , ARM.MRAS.Parse.Internal.Distill
                    , ARM.MRAS.Parse.Internal.AArch64

  build-depends:      base >=4.8 && <5

                    , arm-mras-types
                    , arm-mras-dtd-sysreg
                    , arm-mras-dtd-aarch64
                    , arm-mras-dtd-aarch32

                    , deepseq
                    , filepath
                    , HaXml
                    , lens
