name:                 arm-mras-asl
version:              0.1
license:              MIT
author:               Nick Spinale
maintainer:           spinalen@gmail.com
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:     src
                    , test
  default-language:   Haskell2010
  build-tools:        alex, happy

  exposed-modules:    ARM.MRAS.ASL.Parser
                    , ARM.MRAS.ASL.Parser.Lexer
                    , ARM.MRAS.ASL.Parser.Parser
                    , ARM.MRAS.ASL.Parser.ParserMonad
                    , ARM.MRAS.ASL.Parser.Syntax
                    , ARM.MRAS.ASL.Parser.Tokens
                    , Test

  build-depends:      base >=4.9 && <5

                    , array
                    , deepseq
                    , lens
                    , mtl
                    , transformers

                    -- remove after testing
                    , arm-mras-types
                    , arm-mras-values
                    , filepath
                    , directory

-- test-suite test
--   type:               exitcode-stdio-1.0
--   default-language:   Haskell2010
--   hs-source-dirs:     test
--   main-is:            Test.hs
--
--   build-depends:      base >=4.8 && <5
--                     , arm-mras-asl
--
--                     , arm-mras
--
--                     , array
--                     , deepseq
--                     , directory
--                     , filepath
--                     , lens
--                     , mtl
--                     , transformers
