name:                 arm-mras-asl
version:              0.1
license:              MIT
author:               Nick Spinale
maintainer:           spinalen@gmail.com
build-type:           Simple
cabal-version:        >=1.10

extra-source-files:   tests/prelude.asl

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-tools:        alex, happy

  exposed-modules:    ARM.MRAS.ASL.Parser
                    , ARM.MRAS.ASL.Parser.Lexer
                    , ARM.MRAS.ASL.Parser.Parser
                    , ARM.MRAS.ASL.Parser.ParserMonad
                    , ARM.MRAS.ASL.Parser.Syntax
                    , ARM.MRAS.ASL.Parser.Tokens

  build-depends:      base >=4.9 && <5
                    , array
                    , deepseq
                    , lens
                    , mtl
                    , transformers

test-suite test
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     tests, src
  main-is:            Test.hs

  -- for now
  other-modules:      Recon
                    , ARM.MRAS.ASL.Parser
                    , ARM.MRAS.ASL.Parser.Lexer
                    , ARM.MRAS.ASL.Parser.Parser
                    , ARM.MRAS.ASL.Parser.ParserMonad
                    , ARM.MRAS.ASL.Parser.Syntax
                    , ARM.MRAS.ASL.Parser.Tokens

  build-depends:      base >=4.8 && <5
                    , arm-mras
                    , array
                    , deepseq
                    , directory
                    , filepath
                    , lens
                    , mtl
                    , transformers
