Name:                arm-mra-dtd-gen-utils
Version:             0.1
license:             MIT
author:              Nick Spinale
maintainer:          spinalen@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable gen-arm-mra-dtd
  main-is:           Main.hs
  build-depends:     base
                   , bytestring
                   , Cabal
                   , directory
                   , filepath
                   , HaXml
                   , pretty
