Name:                 arm-mras-dtd-gen-utils
Version:              0.1
license:              MIT
author:               Nick Spinale
maintainer:           spinalen@gmail.com
build-type:           Simple
cabal-version:        >=1.10

executable gen-arm-mras-dtd
  main-is:            Main.hs
  default-language:   Haskell2010

  build-depends:      base
                    , bytestring
                    , Cabal
                    , directory
                    , filepath
                    , haskell-src-exts
                    , HaXml
                    , pretty
