Name:                harm-gen-utils
Version:             0.1
license:             MIT
author:              Nick Spinale
maintainer:          spinalen@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable gen-harm
  main-is:           Main.hs

  build-depends:     base

                   , arm-mras
                   , arm-mras-types

                   , bytestring
                   , directory
                   , exceptions
                   , filepath
                   , haskell-src-exts
