name:                 arm-mras-parse
version:              0.1
license:              MIT
author:               Nick Spinale
maintainer:           spinalen@gmail.com
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010

  exposed-modules:    ARM.MRAS.Parse
                    , ARM.MRAS.Parse.Internal.Distill
                    , ARM.MRAS.Parse.Internal.Tidy
                    , ARM.MRAS.Parse.Internal.SharedPs
                    , ARM.MRAS.Parse.Internal.Common

  build-depends:      base >=4.8 && <5

                    , arm-mras-types
                    , arm-mras-dtd-sysreg
                    , arm-mras-dtd-a64
                    , arm-mras-dtd-aarch32

                    , deepseq
                    , directory
                    , exceptions
                    , filepath
                    , HaXml
                    , lens
                    , monad-logger
                    , mtl
                    , pretty
                    , text
                    , transformers
