name:                 arm-mras-types
version:              0.1
license:              MIT
author:               Nick Spinale
maintainer:           spinalen@gmail.com
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010

  exposed-modules:    ARM.MRAS.Types
                    , ARM.MRAS.Types.Lens
                    , ARM.MRAS.Types.Diagram
                    , ARM.MRAS.Types.Table

  build-depends:      base >=4.8 && <5

                    , attoparsec
                    , deepseq
                    , exceptions
                    , lens
                    , text
