Name:                 arm-mras-gen-utils
Version:              0.1
license:              MIT
author:               Nick Spinale
maintainer:           spinalen@gmail.com
build-type:           Simple
cabal-version:        >=1.10

executable gen-arm-mras
  main-is:            Main.hs
  default-language:   Haskell2010

  build-depends:      base

                    , arm-mras-types
                    , arm-mras-parse

                    , directory
                    , filepath
                    , haskell-src-exts
