name:                 aadl
version:              0.1
license:              MIT
author:               Nick Spinale
maintainer:           spinalen@gmail.com
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-tools:        alex, happy

  exposed-modules:    AADL
                    , AADL.Tokens
                    , AADL.ParserMonad
                    , AADL.Lexer
                    , AADL.Types

  build-depends:      base >=4.8 && <5
                    , array
                    , bytestring
                    , deepseq
                    , directory
                    , exceptions
                    , filepath
                    , lens
                    , monad-logger
                    , mtl
                    , pretty
                    , text
                    , transformers
