Name:                arm-binutils-tables-types
Version:             0.1
license:             MIT
author:              Nick Spinale
maintainer:          spinalen@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  hs-source-dirs:    src, gen

  exposed-modules:   ARM.Binutils.Tables.Types
                     ARM.Binutils.Tables.Types.Gen

  build-depends:     base >=4.8 && <5
                   , deepseq


executable gen-arm-binutils-tables
  default-language:  Haskell2010
  hs-source-dirs:    exe
  main-is:           Main.hs
  build-depends:     base
                   , arm-binutils-tables-types
                   , directory
                   , filepath
                   , language-c
                   , haskell-src-exts
                   , deepseq
