Name:                arm-go-tables-types
Version:             0.1
license:             MIT
author:              Nick Spinale
maintainer:          spinalen@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  hs-source-dirs:    src, gen

  exposed-modules:   ARM.Go.Tables.Types
                     ARM.Go.Tables.Types.Gen

  build-depends:     base >=4.8 && <5
                   , deepseq
