Name:                arm-go-tables-gen-utils
Version:             0.1
license:             MIT
author:              Nick Spinale
maintainer:          spinalen@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable gen-arm-go-tables
  default-language:  Haskell2010
  main-is:           Main.hs
  build-depends:     base
                   , arm-go-tables-types
                   , attoparsec
                   , directory
                   , filepath
                   , haskell-src-exts
                   , text
