name:                 arm-mras-types
version:              0.1
license:              MIT
author:               Nick Spinale
maintainer:           spinalen@gmail.com
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010

  exposed-modules:    ARM.MRAS.Types
                    , ARM.MRAS.Types.Diagram
                    , ARM.MRAS.Types.Table
                    , ARM.MRAS.Parse
                    , ARM.MRAS.Parse.IO
                    , ARM.MRAS.Parse.Internal.Distill
                    , ARM.MRAS.Parse.Internal.Tidy

  build-depends:      base >=4.8 && <5

                    , arm-mras-dtd-sysreg
                    , arm-mras-dtd-a64
                    , arm-mras-dtd-aarch32

                    , attoparsec
                    , bytestring
                    , Cabal
                    , deepseq
                    , directory
                    , exceptions
                    , filepath
                    , haskell-src-exts
                    , HaXml
                    , monad-logger
                    , mtl
                    , pretty
                    , text
                    , transformers
