Name:                binutils-aarch64-opcode-table-types
Version:             0.1
license:             MIT
author:              Nick Spinale
maintainer:          spinalen@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  hs-source-dirs:    src, gen

  exposed-modules:   HarmGen.Binutils.Types
                     HarmGen.Binutils.Types.Gen.Enums

  build-depends:     base >=4.8 && <5
                   , deepseq


executable gen
  default-language:  Haskell2010
  hs-source-dirs:    exe
  main-is:           Main.hs
  build-depends:     base
                   , binutils-aarch64-opcode-table-types
                   , directory
                   , filepath
                   , language-c
                   , haskell-src-exts
                   , deepseq
