Name:                binutils-aarch64-opcode-table-value
Version:             0.1
license:             MIT
author:              Nick Spinale
maintainer:          spinalen@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  hs-source-dirs:    src, gen

  exposed-modules:   HarmGen.Binutils.Table
                     HarmGen.Binutils.Table.Gen

  build-depends:     base >=4.8 && <5
                   , binutils-aarch64-opcode-table-types
