Name:                arm-binutils-tables
Version:             0.1
license:             MIT
author:              Nick Spinale
maintainer:          spinalen@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  hs-source-dirs:    src, gen

  exposed-modules:   ARM.Binutils.Tables
                     ARM.Binutils.Tables.Gen

  build-depends:     base >=4.8 && <5
                   , arm-binutils-tables-types
