name:                 harm-tables
version:              0.1
license:              MIT
author:               Nick Spinale
maintainer:           spinalen@gmail.com
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:     src, gen
  default-language:   Haskell2010

  exposed-modules:    Harm.Tables

                    , Harm.Tables.Gen.Insn
                    , Harm.Tables.Gen.Decode
                    , Harm.Tables.Gen.Encode
                    , Harm.Tables.Gen.Parse
                    , Harm.Tables.Gen.Show

                    , Harm.Tables.Logic
                    , Harm.Tables.Logic.Binary
                    , Harm.Tables.Logic.Asm
                    , Harm.Tables.Logic.Types

  build-depends:      base >=4.8 && <5
                    , harm-types
                    , attoparsec
                    , ghc-prim
