name:                 harm-types
version:              0.1
license:              MIT
author:               Nick Spinale
maintainer:           spinalen@gmail.com
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010

  exposed-modules:    Harm.Types
                    , Harm.Types.W
                    , Harm.Types.I
                    , Harm.Types.Operands
                    , Harm.Types.Pattern

  build-depends:      base >=4.8 && <5
                    , ghc-prim
                    , deepseq
