name:                 harm
version:              0.1
license:              MIT
author:               Nick Spinale
maintainer:           spinalen@gmail.com
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:     src, test
  default-language:   Haskell2010

  exposed-modules:    Harm
                    , Harm.Extra
                    , Test

  build-depends:      base >=4.8 && <5
                    , harm-types
                    , harm-tables
                    , attoparsec
                    , bytestring
                    , elf
                    , cereal
                    , text
